
2011-11-06  David Seikel (onefang)

	* Lua: Added color_class and text_class functions.
	    Still need to write a function for setting the classes of an object.
	    This works for things in OTHER groups using those classes though.
	* Add image, text, textblock (commented out), and edje objects.
	    Very basic support.
	* Add functions for set/get text font, size, and text.
	* Add function for set/get image image.
	    Still needs to limit to only imagess in the current edje file.
	* Add functions for set/get image fill and filled.
	* Add function for set/get edje file.
	    Still needs to limit to only groups in the current edje file.
	* Add full support for evas line object.
	* Add full support for evas polygon object.
	* Beefed up the example lua script to show most of the above.
	  Including some handling of size changes.
	* White space fixes, one of the editors I use cleans those up automatically.  shrugs

2011-11-06  David Seikel (onefang)

	* Lua: Added half of the evas map API.

2011-11-07  David Seikel (onefang)

	* Lua: Added the other half of the evas map API.

2011-11-19  Carsten Haitzler (The Rasterman)

	* Fix message and signal propagation to be consistent in all situations
        as well as simpler.

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release

2011-12-12 Mike Blumenkrantz (discomfitor/zmike)

        * Fix potential crash from buffer overflow on copying map data.

2011-12-15  Tom Hacohen (TAsn)

	* Entry: Added support for various new key bindings:
	Ctrl+Arrows, Ctrl+Del and Ctrl+Backspace.
	* Entry: Added cursor,changed,manual signal.
	This signal indicates the cursor has been manually changed, i.e by
	either mouse click or arrows.

2011-12-15  Cedric Bail

	* Fix detections of limits by edje_cc parser.

2011-12-16  Cedric Bail

	* Fix wrong call to free() in edje_load.
	* Reduce parts walk to the strict minimum.

2011-12-19  Cedric Bail

	* Check existence of group at compile time also.